# 요구 CMake 최소 버전
CMAKE_MINIMUM_REQUIRED ( VERSION 2.8.11 )

project( "AT6200" )
message( "-- Project : "  ${PROJECT_NAME} )

if ( NOT DEFINED ENV{ATOS_DIR} )
    message( FATAL_ERROR "Please set $ATOS_DIR system environment variable!!" )
else()
    message("-- ATOS_DIR : " $ENV{ATOS_DIR})
endif()

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET( CMAKE_VERBOSE_MAKEFILE false )
SET( CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR} )

SET( INSTALL_PREFIX_DIR ${CMAKE_INSTALL_PREFIX} )

#SET( CMAKE_BUILD_TYPE Release )     #Debub/Release
if( NOT CMAKE_BUILD_TYPE )
    set( CMAKE_BUILD_TYPE Release )
endif( NOT CMAKE_BUILD_TYPE )

# 빌드 대상 서브 디렉토리 추가
ADD_SUBDIRECTORY(ABLEE_CpuMon)
ADD_SUBDIRECTORY(ABLEE_EAPSimm)
ADD_SUBDIRECTORY(ABLEE_ChamberComm)
ADD_SUBDIRECTORY(ABLEE_ChamberUi)
ADD_SUBDIRECTORY(ABLEE_ConfigUi)
ADD_SUBDIRECTORY(ABLEE_SysMonUi)
ADD_SUBDIRECTORY(ABLEE_Io)
ADD_SUBDIRECTORY(ABLEE_Ipchange)
ADD_SUBDIRECTORY(ABLEE_Loader)
ADD_SUBDIRECTORY(ABLEE_MainCL)
ADD_SUBDIRECTORY(ABLEE_PatCL)
ADD_SUBDIRECTORY(ABLEE_PLCSimm)
ADD_SUBDIRECTORY(ABLEE_SaveData)
ADD_SUBDIRECTORY(ABLEE_SaveMap)
ADD_SUBDIRECTORY(ABLEE_TestLib)
ADD_SUBDIRECTORY(ABLEE_LogViewer)
ADD_SUBDIRECTORY(ABLEE_KillProcess)
ADD_SUBDIRECTORY(ABLEE_TestMgr)
ADD_SUBDIRECTORY(ABLEE_MainUi)
ADD_SUBDIRECTORY(ABLEE_TmsUi)
ADD_SUBDIRECTORY(ABLEE_Ftp)
